<resources>
    <!-- App -->
    <string name="app_name">Todo</string>
    <string name="logout">Logout</string>
    <string name="config">Config</string>

    <!-- Login -->
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>

    <!-- Config -->
    <string name="text">New Text</string>
    <string name="logging_enabled">Logging</string>
    <string name="login_enabled">Login</string>
    <string name="ccr_enabled">Custom Conflict Resolution</string>
    <string name="sg_url">SG Url</string>
    <string name="db_name">DB Name</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>

    <!-- ??? -->
    <string name="one">1</string>
    <string name="delete">Delete</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="title_dialog_new_list">Create new list</string>
    <string name="title_dialog_new_task">Create new task</string>
    <string name="title_dialog_new_user">Create new user</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_dialog_update">Update task</string>
    <string name="title_list_detail">List Detail</string>
    <string name="title_activity_login">Sign in</string>
</resources>
