<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_large"
    tools:context="com.couchbase.todo.ConfigActivity"
    >

    <TextView
        android:id="@+id/loggingEnabledLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/loginEnabledLabel"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/logging_enabled"
        style="@style/TodoTheme.Text"
        />

    <CheckBox
        android:id="@+id/loggingEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/loggingEnabledLabel"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/loginEnabledLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/loggingEnabledLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ccrEnabledLabel"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/login_enabled"
        style="@style/TodoTheme.Text"
        />

    <CheckBox
        android:id="@+id/loginEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/loginEnabledLabel"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/ccrEnabledLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/loginEnabledLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/dbNameLayout"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/ccr_enabled"
        style="@style/TodoTheme.Text"
        />

    <CheckBox
        android:id="@+id/ccrEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/ccrEnabledLabel"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dbNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ccrEnabledLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sgUrlLayout"
        android:layout_marginTop="@dimen/spacing_medium"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dbName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/db_name"
            style="@style/TodoTheme.Text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sgUrlLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dbNameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_medium"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sgUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sg_url"
            style="@style/TodoTheme.Text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdate"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/colorAccent"
        />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/colorAccent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
